# spectosoft

./: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: activity_service.rs  lib.rs  main.rs  screenshot_service.rs  video_service.rs
src-tauri/src/video_main/: mod.rs  mp4_writer.rs  recorder.rs
src/components/: Navbar.jsx  Sidebar.jsx
src/components/ui/button/: Button.tsx
src/pages/: Dashboard.jsx
src/pages/Auth/: AuthLayout.jsx  Login.jsx
