[package]
name = "main_dashboard_spinup"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "main_dashboard_spinup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
fs = "0.0.5"
xcap = "0.1.0"
chrono = "0.4"
image = { version = "0.25", features = ["png", "jpeg"] }
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }
fs_extra = "1.3"
rand ="0.8"
uuid = { version = "1", features = ["v4"] }
rdev = "0.5.3" # For keyboard and mouse events
active-win-pos-rs = "0.9" # For capturing active window titles
sysinfo = "0.29" # For process listing (basic browser detection)
dirs = "6.0.0"
windows-capture="1.5.0"
oneshot = "0.1.6"
# Low-level Windows API access (as requested by your manager)
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_MediaFoundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
